feat: modify add_greet

--- a/views/add_greet.hbs
+++ b/views/add_greet.hbs
@@ -1,7 +1,7 @@
 <div class="container" >
   <h1>新增 通知問候</h1>
   {{#if result}}
-  <h2 style="color: red;">已新增過資料，請使用編輯功能修改內容！</h2>
+  <h2 style="color: red;">已新增過資料，請使用編輯功能修改！</h2>
   {{/if}}
 
     <form action="/greet" method="POST" class="col-12 d-flex flex-column justify-content-center align-items-around mt-5">
