modify: modify add_company & add_greet and add code commenter of routes/greet.js

--- a/views/edit_greet.hbs
+++ b/views/edit_greet.hbs
@@ -1,6 +1,6 @@
 <div class="container" >
   <h1>通知問候</h1>
-
+  <div class="my-4">
     <div class="form-group mb-4 col-12 d-flex">
         <label for="page_greet" class="col-2">頁面通知:</label>
         <textarea name="page_greet" id="page_greet" placeholder="請輸入頁面通知的內容" class="form-control" rows="4" disabled>{{result.PAGE_GREET}}</textarea>
@@ -52,4 +52,5 @@
     <div class="mb-5 d-flex justify-content-center">
         <a href="/" class="btn btn-dark active col-2" role="button">返回</a>
     </div>
+  </div>
 </div>
