--- a/views/add_company.hbs
+++ b/views/add_company.hbs
@@ -7,42 +7,42 @@
     <form action="/company" method="POST" class="col-12 d-flex flex-column justify-content-center align-items-around mt-5">
       <div class="form-group mb-4 col-12 d-flex">
         <label for="name" class="col-2">公司名稱:</label>
-        <input type="text" name="name" id="name" placeholder="請輸入公司名稱" class="form-control" {{#if result}} disabled {{/if}}>
+        <input type="text" name="name" id="name" placeholder="請輸入公司名稱" class="form-control" {{#if result}}value="{{result.NAME}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="tel" class="col-2">公司電話:</label>
-        <input type="text" name="tel" id="tel" placeholder="請輸入公司電話" class="form-control" {{#if result}} disabled {{/if}}>
+        <input type="text" name="tel" id="tel" placeholder="請輸入公司電話" class="form-control" {{#if result}}value="{{result.TEL}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="address" class="col-2">公司地址:</label>
-        <input type="text" name="address" id="address" placeholder="請輸入公司地址" class="form-control" {{#if result}} disabled {{/if}}>
+        <input type="text" name="address" id="address" placeholder="請輸入公司地址" class="form-control" {{#if result}}value="{{result.ADDR}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="introduction" class="col-2">c公司簡介:</label>
-        <textarea type="text" name="introduction" id="introduction" placeholder="請輸入公司簡介" class="form-control" rows="4" {{#if result}} disabled {{/if}}></textarea>
+        <textarea type="text" name="introduction" id="introduction" placeholder="請輸入公司簡介" class="form-control" rows="4" {{#if result}} disabled {{/if}}>{{#if result}}{{result.INTRODUCTION}}{{/if}}</textarea>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="benefits" class="col-2">公司福利:</label>
-        <textarea name="benefits" id="benefit" placeholder="請輸入公司福利" class="form-control" rows="4" {{#if result}} disabled {{/if}}></textarea>
+        <textarea name="benefits" id="benefits" placeholder="請輸入公司福利" class="form-control" rows="4" {{#if result}} disabled {{/if}}>{{#if result}}{{result.BENEFITS}}{{/if}}</textarea>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="worktime" class="col-2">上班時間:</label>
-        <textarea name="worktime" id="worktime" placeholder="請輸入公司上、下班時間" class="form-control" rows="4" {{#if result}} disabled {{/if}}></textarea>
+        <textarea name="worktime" id="worktime" placeholder="請輸入公司上、下班時間" class="form-control" rows="4" {{#if result}} disabled {{/if}}>{{#if result}}{{result.WORKTIME}}{{/if}}</textarea>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="interview" class="col-2">面試資訊:</label>
-        <textarea name="interview" id="interview" placeholder="請輸入公司面試資訊" class="form-control" rows="4" {{#if result}} disabled {{/if}}></textarea>
+        <textarea name="interview" id="interview" placeholder="請輸入公司面試資訊" class="form-control" rows="4" {{#if result}} disabled {{/if}}>{{#if result}}{{result.INTERVIEW}}{{/if}}</textarea>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="accept" class="col-2">錄取通知:</label>
-        <textarea name="accept" id="accept" placeholder="請輸入公司錄取通知方式" class="form-control" rows="4" {{#if result}} disabled {{/if}}></textarea>
+        <textarea name="accept" id="accept" placeholder="請輸入公司錄取通知方式" class="form-control" rows="4" {{#if result}} disabled {{/if}}>{{#if result}}{{result.ACCEPT}}{{/if}}</textarea>
       </div>
       <div class="mb-5 d-flex justify-content-center">
         <button class="btn btn-primary col-2 mx-3 {{#if result}} disabled {{/if}}" type="submit">儲存</button>
