feat: middleware/getCompanyName.js & modify main.hbs and chatbot

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,7 +36,7 @@
               socketUrl: "http://192.168.10.108:5005",
               profileAvatar: "/images/jennyhire.jpg",
               inputTextFieldHint: "請輸入內容....",
-              title: `[測試版]{{result.NAME}}小幫手`,
+              title: `[測試版]{{companyName}}小幫手`,
               subtitle: "",
               params: { "storage": "session" },
               showFullScreenButton: true,
@@ -54,7 +54,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="/">{{title}}小幫手設定</a>
+      <a class="navbar-brand" href="/">設定{{companyName}}小幫手</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
