feat: add message.hbs and add valida func to routes/company.js & routes/greet.js and modeify add_company.hbs & add_greet.hbs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11648,6 +11648,11 @@ header.masthead .post-heading .meta a {
     height: 80vh;
 }
 
+.alert-danger {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 /* .rw-conversation-container .rw-message {
     flex-wrap: nowrap !important;
 } */
