--- a/views/add_company.hbs
+++ b/views/add_company.hbs
@@ -7,17 +7,17 @@
     <form action="/company" method="POST" class="col-12 d-flex flex-column justify-content-center align-items-around mt-5">
       <div class="form-group mb-4 col-12 d-flex">
         <label for="name" class="col-2">公司名稱:</label>
-        <input type="text" name="name" id="name" placeholder="請輸入公司名稱" class="form-control" value="{{result.name}}" {{#if hasResult}} value="{{hasResult.NAME}}" disabled {{/if}}>
+        <input type="text" name="name" id="name" placeholder="請輸入公司名稱" class="form-control" {{#if result}} value="{{result.name}}" {{/if}} {{#if hasResult}} value="{{hasResult.NAME}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="tel" class="col-2">公司電話:</label>
-        <input type="text" name="tel" id="tel" placeholder="請輸入公司電話" class="form-control" value="{{result.tel}}" {{#if hasResult}} value="{{hasResult.TEL}}" disabled {{/if}}>
+        <input type="text" name="tel" id="tel" placeholder="請輸入公司電話" class="form-control" {{#if result}} value="{{result.tel}}" {{/if}} {{#if hasResult}} value="{{hasResult.TEL}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
         <label for="address" class="col-2">公司地址:</label>
-        <input type="text" name="address" id="address" placeholder="請輸入公司地址" class="form-control" value="{{result.address}}" {{#if hasResult}} value="{{hasResult.ADDR}}" disabled {{/if}}>
+        <input type="text" name="address" id="address" placeholder="請輸入公司地址" class="form-control" {{#if result}} value="{{result.address}}" {{/if}} {{#if hasResult}} value="{{hasResult.ADDR}}" disabled {{/if}}>
       </div>
 
       <div class="form-group mb-4 col-12 d-flex">
