feat: add userId to main.hbs

--- a/views/edit_company.hbs
+++ b/views/edit_company.hbs
@@ -21,7 +21,7 @@
       <label for="address" class="col-2">公司地址:</label>
       <input type="text" name="address" id="address" placeholder="enter company address" class="form-control" value="{{result.ADDR}}" disabled>
       <div class="col-2">
-        <a href="/company/{{keys.addr}}/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
+        <a href="/company/{{keys.address}}/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
       </div>
     </div>
 
