--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -33,7 +33,7 @@
         (e.onload = () => {
           window.WebChat.default(
             {
-              customData: { "language": "zh", "userId": `{{companyName}}`},
+              customData: { "language": "zh", "userId": `{{cpyNo}}`},
               socketUrl: "http://192.168.10.108:5005",
               profileAvatar: "/images/jennyhire.jpg",
               inputTextFieldHint: "請輸入內容....",
