feat: add position.hbs and position.js

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11653,6 +11653,13 @@ header.masthead .post-heading .meta a {
     font-weight: bold;
 }
 
+.scroll-view{
+    width: auto;
+    height: 50vw;
+    white-space: nowrap;
+    overflow-y: auto;
+  }
+
 /* .rw-conversation-container .rw-message {
     flex-wrap: nowrap !important;
 } */
