--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,7 @@
 
       <div>
         <label class="m-5">職缺設定:</label>
-        <a href="/position" class="btn btn-success active" role="button">新增</a>
-        <a href="/position/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
+        <a href="/position" class="btn btn-success active" role="button">設定</a>
       </div>
 
       <div>
