--- a/views/position.hbs
+++ b/views/position.hbs
@@ -11,13 +11,13 @@
                 <div class="col-12 d-flex justify-content-between" style="border: 1px solid black;">
                   <div class="col-2 d-flex align-items-center justify-content-center" 
                     style="font-weight: bold; color:#111">
-                    {{this.position_name}}
+                    {{this.POSITION_NAME}}
                   </div>
                   <div class="col-6">
-                    <p style="font-size: 13px; white-space:pre-line;">{{ this.position_des }}</p>
+                    <p style="font-size: 13px; white-space:pre-line;">{{ this.POSITION_DES }}</p>
                   </div>
                   <div class="col-4 d-flex flex-row justify-content-center align-items-center">
-                    <a href="/position/{{ this._id}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
+                    <a href="/position/{{ this.POSITION_ID}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
