feat: add validated function for delete router

--- a/views/position.hbs
+++ b/views/position.hbs
@@ -1,4 +1,5 @@
 <h1 class="m-5">職缺資訊</h1>
+{{> message}}
 <div class="row d-flex justify-content-center all">
    <div class="col-9 wrapper">
     <div class="scroll-view">
