--- a/views/position.hbs
+++ b/views/position.hbs
@@ -43,6 +43,12 @@
         style="font-size: 1.5rem;">新增職缺</a>
     </div>
   </div>
+  <div class="col-10">
+    <div class="row justify-content-center">
+      <a href="/" class="btn btn-outline-dark col-4 mb-5" id="create-btn"
+        style="font-size: 1.5rem;">返回</a>
+    </div>
+  </div>
 </div>
 
 <!-- Modal -->
