refactor: add new_company.js and company.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,7 @@
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div>
         <label class="m-5">公司資訊:</label>
-        <a href="/company/add" class="btn btn-success active" role="button">新增</a>
-        <a href="/company/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
+         <a href="/company" class="btn btn-success active" role="button">設定</a>
       </div>
 
       <div>
