--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-    <div class="container mb-5 d-flex flex-column align-items-center home-container">
+    <div class="container d-flex flex-column align-items-center home-container m-5">
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div>
         <label class="m-5">公司資訊:</label>
