--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -53,14 +53,9 @@
     })();
   </script>
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+  <nav class="navbar navbar navbar-dark bg-dark mb-5" id="mainNav">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="/">設定{{companyName}}小幫手</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
+      <a class="navbar-brand navbar-light" href="/">設定{{companyName}}小幫手</a>
       {{!-- <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto py-4 py-lg-0">
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/company">公司資訊</a></li>
@@ -69,13 +64,13 @@
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/default">預設回覆</a></li>
         </ul>
       </div> --}}
-
+      <h1 style="color: #fff;">ChatBot設定</h1>
       <button class="btn btn-light mx-3">Logout</button>
 
     </div>
   </nav>
   <!-- Page Header-->
-  <header class="masthead">
+  {{!-- <header>
     <div class="container position-relative px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
@@ -86,7 +81,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> --}}
 
 {{{body}}}
 
