--- a/views/position.hbs
+++ b/views/position.hbs
@@ -1,6 +1,6 @@
-<h1 class="m-5">職缺資訊</h1>
-{{> message}}
-<div class="row d-flex justify-content-center all">
+<div class="row d-flex justify-content-center all m-5">
+  <h1 class="m-5">職缺資訊</h1>
+  {{> message}}
    <div class="col-9 wrapper">
     <div class="scroll-view">
       <ul class="list-group">
