--- a/views/new_position.hbs
+++ b/views/new_position.hbs
@@ -19,7 +19,7 @@
               <span class="input-group-text">職位資訊</span>
             </div>
             <textarea type="text" class="form-control" name="des" placeholder="請輸入職位需求、工作內容、薪資" aria-label="inputDes"
-              aria-describedby="des" value="{{ positionResult.des }}" rows="15" required></textarea>
+              aria-describedby="des" rows="10" required>{{ positionResult.des }}</textarea>
           </div>
 
         </div>
