--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,7 +1,7 @@
 {{#if errors}}
 {{#each errors}}
-<div class="col-12 d-flex justify-content-center mt-4">
-    <div class="alert alert-danger alert-dismissible fade show col-5" role="alert">
+<div class="col-12 mt-4">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
     {{this.message}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
