feat: add function of delete company info

--- a/views/position.hbs
+++ b/views/position.hbs
@@ -23,7 +23,7 @@
                     </a>
                     <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.POSITION_ID }}"
-                        data-name="{{ this.POSITION_NAME }}">
+                        data-name="{{ this.POSITION_NAME }}" data-category="position">
                         刪除
                     </button>
                   </div>
