--- a/views/company.hbs
+++ b/views/company.hbs
@@ -1,7 +1,8 @@
 <div class="row d-flex justify-content-center all m-5">
   <h1 class="m-5">公司資訊</h1>
-  {{> message}}
+  
    <div class="col-9 wrapper">
+    {{> message}}
     <div class="scroll-view">
       <ul class="list-group">
         <div class="row d-flex justify-content-center" id="data-panel">
@@ -23,7 +24,7 @@
                     </a>
                     <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.INFO_NO }}"
-                        data-name="{{ this.INFO_NAME }}">
+                        data-name="{{ this.INFO_NAME }}" data-category="company">
                         刪除
                     </button>
                   </div>
@@ -57,7 +58,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalScrollableTitle">刪除職缺</h5>
+        <h5 class="modal-title" id="exampleModalScrollableTitle">刪除資訊</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -67,7 +68,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-        <form action="/position/{{ this.POSITION_ID }}" method="post" style="display:inline-block;" id="delete-form">
+        <form action="/company/{{ this.POSITION_ID }}" method="post" style="display:inline-block;" id="delete-form">
           <button type="submit" class="btn btn-danger">確定</button>
         </form>
       </div>
