--- a/views/new_company.hbs
+++ b/views/new_company.hbs
@@ -28,7 +28,7 @@
 
         </div>
         <div class="modal-footer">
-          <a href="/position" class="btn btn-outline-info">取消</a>
+          <a href="/company" class="btn btn-outline-info">取消</a>
           <button type="submit" class="btn btn-primary confirm-btn" id="confirm-create">新增</button>
         </div>
       </form>
