--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -11,3 +11,16 @@
 {{/each}}
 {{/if}}
 
+{{#if errorMessage}}
+{{#each errorMessage}}
+<div class="col-12 mt-4">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{this.message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+</div>
+{{/each}}
+{{/if}}
+
