feat: add function of edit company info

--- a/views/edit_company.hbs
+++ b/views/edit_company.hbs
@@ -1,73 +1,35 @@
-<div class="container">
-  <h1>公司資訊</h1>
-  <div class="my-4">
-    {{> message}}
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="name" class="col-2">公司名稱:</label>
-      <input type="text" name="name" id="name" placeholder="enter company name" class="form-control" value="{{result.NAME}}" disabled>
-      <div class="col-2">
-        <a href="/company/{{keys.name}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
+<div class="row mt-5">
+  <div class="col-md-8 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mt-3">編輯公司資訊</h1>
+      {{> message}}
+      <form action="/company/{{info.INFO_NO}}?_method=PUT" method="POST">
+        <div class="modal-body">
 
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="tel" class="col-2">公司電話:</label>
-      <input type="text" name="tel" id="tel" placeholder="enter company tel" class="form-control" value="{{result.TEL}}" disabled>
-      <div class="col-2">
-        <a href="/company/{{keys.tel}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="INFO_NO">資訊類別</label>
+            </div>
+            <select class="custom-select" id="INFO_NO" name="INFO_NO" required>
+              <option value="" hidden>請選擇</option>
+              <option value="{{info.INFO_NO}}" selected disabled>{{info.INFO_NAME}}</option>
+            </select>
+          </div>
 
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="address" class="col-2">公司地址:</label>
-      <input type="text" name="address" id="address" placeholder="enter company address" class="form-control" value="{{result.ADDR}}" disabled>
-      <div class="col-2">
-        <a href="/company/{{keys.address}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">資訊內容</span>
+            </div>
+            <textarea type="text" class="form-control" name="INFO_DES" placeholder="請輸入資訊內容..." aria-label="inputDes"
+              aria-describedby="des" rows="10" required>{{ info.INFO_DES }}</textarea>
+          </div>
 
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="introduction" class="col-2">公司簡介:</label>
-      <textarea type="text" name="introduction" id="introduction" placeholder="enter company introduction" class="form-control" rows="4" disabled>{{result.INTRODUCTION}}</textarea>
-      <div class="col-2">
-        <a href="/company/{{keys.introduction}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
-
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="benefits" class="col-2">公司福利:</label>
-      <textarea name="benefits" id="benefit" placeholder="enter company benefits" class="form-control" rows="4" disabled>{{result.BENEFITS}}</textarea>
-      <div class="col-2">
-        <a href="/company/{{keys.benefits}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
-
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="worktime" class="col-2">上班時間:</label>
-      <textarea name="worktime" id="worktime" placeholder="enter company worktime" class="form-control" rows="4" disabled>{{result.WORKTIME}}</textarea>
-      <div class="col-2">
-        <a href="/company/{{keys.worktime}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
-
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="interview" class="col-2">面試資訊:</label>
-      <textarea name="interview" id="interview" placeholder="enter company interview" class="form-control" rows="4" disabled>{{result.INTERVIEW}}</textarea>
-      <div class="col-2">
-        <a href="/company/{{keys.interview}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
-
-    <div class="form-group mb-4 col-12 d-flex">
-      <label for="accept" class="col-2">錄取通知:</label>
-      <textarea name="accept" id="accept" placeholder="enter company accept" class="form-control" rows="4" disabled>{{result.ACCEPT}}</textarea>
-      <div class="col-2">
-        <a href="/company/{{keys.accept}}/edit" class="btn btn-primary active mx-3 {{#if errors}}disabled{{/if}}" role="button" {{#if errors}} aria-disabled="true" {{/if}}>編輯</a>
-      </div>
-    </div>
-    
-    <div class="my-4 d-flex justify-content-center">
-      <a href="/" class="btn btn-dark active col-2" role="button">返回</a>
+        </div>
+        <div class="modal-footer">
+          <a href="/company" class="btn btn-outline-info">取消</a>
+          <button type="submit" class="btn btn-primary confirm-btn" id="confirm-create">儲存</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
