--- a/views/position.hbs
+++ b/views/position.hbs
@@ -37,16 +37,18 @@
     </div>
   </div>
 
-  <div class="col-10">
-    <div class="row justify-content-center">
-      <a href="/position/new" class="btn btn-outline-primary col-4 my-5" id="create-btn"
-        style="font-size: 1.5rem;">新增職缺</a>
+ <div class="col-10 my-5 d-flex">
+    <div class="col-6">
+      <div class="row justify-content-center">
+        <a href="/position/new" class="btn btn-outline-primary col-8" id="create-btn"
+          style="font-size: 1.5rem;">新增職缺</a>
+      </div>
     </div>
-  </div>
-  <div class="col-10">
-    <div class="row justify-content-center">
-      <a href="/" class="btn btn-outline-dark col-4 mb-5" id="create-btn"
-        style="font-size: 1.5rem;">返回</a>
+    <div class="col-6">
+      <div class="row justify-content-center">
+        <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
+          style="font-size: 1.5rem;">返回</a>
+      </div>
     </div>
   </div>
 </div>
