--- a/views/company.hbs
+++ b/views/company.hbs
@@ -19,7 +19,7 @@
                     <p style="font-size: 13px; white-space:pre-line;">{{ this.INFO_DES }}</p>
                   </div>
                   <div class="col-4 d-flex flex-row justify-content-center align-items-center">
-                    <a href="/Ccompany/{{ this.INFO_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
+                    <a href="/company/{{ this.INFO_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
@@ -37,17 +37,18 @@
       </ul>
     </div>
   </div>
-
-  <div class="col-10">
-    <div class="row justify-content-center">
-      <a href="/company/new" class="btn btn-outline-primary col-4 my-5" id="create-btn"
-        style="font-size: 1.5rem;">新增資訊</a>
+  <div class="col-10 my-5 d-flex">
+    <div class="col-6">
+      <div class="row justify-content-center">
+        <a href="/company/new" class="btn btn-outline-primary col-8" id="create-btn"
+          style="font-size: 1.5rem;">新增資訊</a>
+      </div>
     </div>
-  </div>
-  <div class="col-10">
-    <div class="row justify-content-center">
-      <a href="/" class="btn btn-outline-dark col-4 mb-5" id="create-btn"
-        style="font-size: 1.5rem;">返回</a>
+    <div class="col-6">
+      <div class="row justify-content-center">
+        <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
+          style="font-size: 1.5rem;">返回</a>
+      </div>
     </div>
   </div>
 </div>
