--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -10,3 +10,16 @@
 </div>
 {{/each}}
 {{/if}}
+
+{{#if warning}}
+{{#each warning}}
+<div class="col-12 mt-4">
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{this.message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+</div>
+{{/each}}
+{{/if}}
