--- a/views/position.hbs
+++ b/views/position.hbs
@@ -10,7 +10,7 @@
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
                 <div class="col-12 d-flex justify-content-between" style="border: 1px solid black;">
-                  <div class="row d-flex flex-column mt-3">
+                  <div class="row d-flex flex-column m-3">
                     <div class="col-12 d-flex align-items-center" 
                       style="font-weight: bold; color:#111">
                       {{this.POSITION_NAME}}
