feat: add greet.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,7 @@
 
       <div>
         <label class="m-5">通知問候:</label>
-        <a href="/greet/add" class="btn btn-success active" role="button">新增</a>
-        <a href="/greet/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
+        <a href="/greet" class="btn btn-primary active" role="button">設定</a>
       </div>
 
       <div>
