--- a/views/greet.hbs
+++ b/views/greet.hbs
@@ -24,11 +24,11 @@
                     <a href="/greet/{{ this.GREET_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
-                    <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
+                    {{!-- <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.GREET_NO }}"
                         data-name="{{ this.GREET_NAME }}" data-category="greet">
                         刪除
-                    </button>
+                    </button> --}}
                   </div>
                 </div>
               </div>
@@ -39,13 +39,13 @@
       </ul>
     </div>
   </div>
-  <div class="col-10 my-5 d-flex">
-    <div class="col-6">
+  <div class="col-10 my-5 d-flex  justify-content-center">
+    {{!-- <div class="col-6">
       <div class="row justify-content-center">
         <a href="/greet/new" class="btn btn-outline-primary col-8" id="create-btn"
           style="font-size: 1.5rem;">新增資訊</a>
       </div>
-    </div>
+    </div> --}}
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
