--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-    <div class="container d-flex flex-column align-items-center home-container m-5">
+    <div class="container d-flex flex-column align-items-center home-container mt-5">
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div>
         <label class="m-5">公司資訊:</label>
@@ -17,7 +17,6 @@
 
       <div>
         <label class="m-5">預設回覆:</label>
-        <a href="/default/add" class="btn btn-success active" role="button">新增</a>
-        <a href="/default/edit" class="btn btn-primary active mx-3" role="button">編輯</a>
+        <a href="/default" class="btn btn-primary active" role="button">設定</a>
       </div>
     </div>
