--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -69,57 +69,12 @@
 
     </div>
   </nav>
-  <!-- Page Header-->
-  {{!-- <header>
-    <div class="container position-relative px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <div class="site-heading">
-            <h1>測試聊天機器人</h1>
-            <span class="subheading">點擊右下角藍色點點，開始測試聊天機器人</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header> --}}
 
 {{{body}}}
 
   <!-- Footer-->
-  <footer class="border-top">
-    <div class="container px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
-        </div>
-      </div>
-    </div>
+  <footer class="main-footer">
+    <h3 class="footer-text">Internet Information Co., Ltd All Rights Reserve</h3>
   </footer>
 
   <!-- 導入webchat最新版本 -->
